<resources>
    <string name="app_name">CoinoneAutoTrade</string>

    <string name="krw">KRW</string>
    <string name="btc">BTC</string>
    <string name="bch">BCH</string>
    <string name="eth">ETH</string>
    <string name="etc">ETC</string>
    <string name="xrp">XRP</string>
    <string name="qtum">QTUM</string>
    <string name="ltc">LTC</string>
    <string name="iota">IOTA</string>

    <string name="avail">거래가능</string>
    <string name="balance">보류량</string>
    <string name="price_percent">Price Percent</string>
    <string name="fee_percent">Fee Percent</string>
    <string name="bid_price_range">Bid Price Range</string>
    <string name="ask_price_range">Ask Price Range</string>
    <string name="buy_amount">Buy Amount</string>
    <string name="sell_amount">Sell Amount</string>
    <string name="divide_unit">Divide Unit</string>
    <string name="bid_clear">매수정리</string>
    <string name="ask_clear">매도정리</string>
    <string name="stop">정지</string>
    <string name="run">실행</string>
    <string name="now_price">현재가</string>
    <string name="hold_amount">보류량</string>
    <string name="fee">수수료</string>
    <string name="available_krw">거래가능한화</string>
    <string name="running">가동 중</string>
</resources>
