<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>

        <variable
            name="nowPrice"
            type="Long"/>

        <variable
            name="holdAmount"
            type="Float"/>

        <variable
            name="fee"
            type="Float"/>

        <variable
            name="availableKrw"
            type="Float"/>

        <variable
            name="control"
            type="com.googry.coinoneautotrade.data.realm.AutoBotControl"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/now_price"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(nowPrice)}"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/hold_amount"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{String.format("%.1f", holdAmount)}'/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/fee"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{String.format("%.2f", fee * 100)}'/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/available_krw"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{String.format("%.0f", availableKrw)}'/>

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_percent"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_price_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@{String.valueOf(control.pricePercent)}"
                android:text="@{String.valueOf(control.pricePercent)}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bid_price_range"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_bid_price_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@{String.valueOf(control.bidPriceRange)}"
                android:text="@{String.valueOf(control.bidPriceRange)}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buy_amount"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_buy_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@{String.valueOf(control.buyAmount)}"
                android:text="@{String.valueOf(control.buyAmount)}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sell_amount"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_sell_amout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@{String.valueOf(control.sellAmout)}"
                android:text="@{String.valueOf(control.sellAmout)}"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bid_clear"/>


                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ask_clear"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stop"/>


                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/run"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>